updating stats in app, uploading new pixel csv

--- a/angular/src/app/footer/footer.component.html
+++ b/angular/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
         <a href="https://sh.itjust.works/u/the_real_monte">
-            <i class="fa-regular fa-envelope"></i> Message me
+            <i class="fa-regular fa-envelope"></i> Message me on Lemmy
         </a>
         
 <a href="https://github.com/TheRealMonte/therealmonte.github.io">
