--- a/angular/src/app/stats-2024/stats-2024.component.html
+++ b/angular/src/app/stats-2024/stats-2024.component.html
@@ -10,8 +10,8 @@
 @if (showResults) {
     <main>
         <h2>Hello, {{user.username}}! Here is how you did in 2024</h2>
-        <p>Your ranking: {{user.userRank}} out of 1972 users.</p>
-        <p>The coordinate you placed the most pixels on was ({{user.xCord}}, {{user.yCord}}) - {{user.cordCount}} times.</p>
+        <p>Your ranking: {{user.userRank}} out of 1914 users.</p>
+        <p>The coordinate you placed the most pixels on was ({{user.xCord}}, {{user.yCord}}) - {{user.cordCount}} times (including the pixels you deleted).</p>
         <p>You placed {{user.pixelCount}} pixels throughout the event! Here is how many of each color you placed:</p>
         <div class="colors-wrapper">
             <span class="white count">White: {{userColors.white}}</span>
