--- a/angular/src/app/navbar/navbar.component.css
+++ b/angular/src/app/navbar/navbar.component.css
@@ -92,4 +92,17 @@ select {
         flex-direction: column;
         align-items: center;
     }
+    .search-wrapper {
+        flex-wrap: wrap;
+    }
+    input[type="text"],
+    select {
+        width: 100%;
+    }
+    .mobile {
+        width: 45%;
+    }
+    .large-screens-only {
+        display: none;
+    }
 }
