--- a/angular/src/app/draw/draw.component.css
+++ b/angular/src/app/draw/draw.component.css
@@ -8,7 +8,7 @@
 }
 
 #main-canvas {
-    width: 1020px !important;
+    width: 1020px;
     margin: 10px auto;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -33,7 +33,7 @@ p {
     text-align: center;
 }
 @media only screen and (max-width: 1093px) {
-    main {
+    #main-canvas {
         width: 95%;
     }
     #myCanvas {
