--- a/angular/src/app/all-users/all-users.component.css
+++ b/angular/src/app/all-users/all-users.component.css
@@ -5,7 +5,7 @@ article {
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     padding: 20px;
     border-radius: 5px;
-    background-color: white;
+    background-color: var(--main-background-color);
     cursor: pointer;
 }
 
