--- a/angular/src/app/draw/draw.component.css
+++ b/angular/src/app/draw/draw.component.css
@@ -14,7 +14,7 @@
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     padding: 5px 20px;
     border-radius: 5px;
-    background-color: white;
+    background-color: var(--main-background-color);
 }
 
 .responsive-warning {
