--- a/angular/src/app/loading/loading.component.css
+++ b/angular/src/app/loading/loading.component.css
@@ -7,7 +7,7 @@ main {
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   padding: 5px 20px;
   border-radius: 5px;
-  background-color: white;
+  background-color: var(--main-background-color);
 }
 
 #wrapper {
