--- a/angular/src/app/navbar/navbar.component.css
+++ b/angular/src/app/navbar/navbar.component.css
@@ -7,6 +7,7 @@ header h1 {
     font-size: 70px;
     margin: 0 10px;
     font-family: "Pixelify Sans", sans-serif;
+    color: var(--body-color);
 }
 
 .logo-link {
@@ -40,6 +41,7 @@ header h1 {
     z-index: 2;
 }
 nav {
+    background-color: var(--nav-background-color);
     margin: 10px;
     padding: 10px;
     border-radius: 50px;
@@ -74,6 +76,8 @@ select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    background-color: var(--main-background-color);
+    color: var(--body-color);
 }
 
 @media only screen and (max-width: 610px) {
