--- a/angular/src/app/stats-2023/stats-2023.component.html
+++ b/angular/src/app/stats-2023/stats-2023.component.html
@@ -5,7 +5,7 @@
 @if (!loading) {
     @if (!wasUserFound) {
         <main>
-            <p>Sorry, it looks like you didn't place any pixels during the 2023 event. <a (click)="sendToUsersList(2023)" class="link">Click here</a> to view the list of users for 2023 and see if you can find your username. If you still can't find your username and you truely believe you did participate in 2023, send me a DM <a href="https://sh.itjust.works/u/the_real_monte">&#64;the_real_monte</a> and I can check the database.</p>
+            <p>Sorry, it looks like you didn't place any pixels during the 2023 event. <a (click)="sendToUsersList(2023)" class="link">Click here</a> to view the list of users for 2023 and see if you can find your username. If you still can't find your username and you truely believe you did participate in 2023, send me a DM <a href="https://sh.itjust.works/u/the_real_monte" class="link">&#64;the_real_monte</a> and I can check the database.</p>
         </main>
         }
         @if (wasUserFound) {
