adding graphs for 2024

--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -60,6 +60,9 @@
         <li>hdggDalton&#64;toast.ooo: 1 time</li>
     </ul>
     <p>1101 users deleted a total of 15724 pixels. 13 users deleted all of their pixels.</p>
+    <section class="btn-wrapper">
+        <button (click)="view2024Graphs()" class="btn azure">View the 2024 Graphs</button>
+    </section>
     }
     @if (showYear === 2023) {
     <p>2277 users from 132 instances participated in the event in 2023.</p>
