--- a/angular/src/app/stats-2023/stats-2023.component.html
+++ b/angular/src/app/stats-2023/stats-2023.component.html
@@ -49,7 +49,7 @@
                     <span class="count watermelon">Watermelon: {{userColors.watermelon}}</span>
                 </div>
                 <section class="btn-wrapper">
-                    <button (click)="sendUserTo2024Stats()" class="btn darkGreen">See your 2024 Stats</button>
+                    <button (click)="sendUserTo2024Stats()" class="btn dark-green">See your 2024 Stats</button>
                 </section>
             </main>
         }
