--- a/angular/src/app/stats-2024/stats-2024.component.html
+++ b/angular/src/app/stats-2024/stats-2024.component.html
@@ -50,7 +50,7 @@
             <span class="count watermelon">Watermelon: {{userColors.watermelon}}</span>
         </div>
         <section class="btn-wrapper">
-            <button (click)="sendUserToDraw()" class="btn darkGreen">Click here to see the pixels you placed</button>
+            <button (click)="sendUserToDraw()" class="btn dark-green">Click here to see the pixels you placed</button>
             <button (click)="sendUserTo2023Stats()" class="btn magenta">See your 2023 Stats</button>
         </section>
     </main>
