--- a/angular/src/app/draw-color/draw-color.component.html
+++ b/angular/src/app/draw-color/draw-color.component.html
@@ -1,6 +1,6 @@
-<app-navbar [year]="2024" />
+<app-navbar [year]="year" />
 <main>
-    <p>Here are all of the {{colorName}} pixels drawn durning the 2024 event.</p>
+    <p>Here are all of the {{colorName}} pixels drawn durning the {{year}} event.</p>
     <div class="img-wrapper">
         <img [src]="imgSRC" [alt]="colorName"/>
     </div>
