--- a/angular/src/app/home/home.component.css
+++ b/angular/src/app/home/home.component.css
@@ -18,6 +18,14 @@
     margin: 10px;
 }
 
+.colors-wrapper span {
+    border: 1px solid #424651;
+    margin: 5px;
+    padding: 5px;
+    cursor: pointer;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
 .count {
     border: 1px solid #424651;
     margin: 5px;
@@ -26,4 +34,15 @@
 
 .color-link {
     cursor: pointer;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.color-link:hover {
+    border: 1px solid var(--body-color);
+}
+
+.full {
+    width: 95%;
+    display: block;
+    margin: 10px auto;
 }
