--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -68,6 +68,7 @@ h2 {
     text-align: center;
     box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
     font-size: 20px;
+    cursor: pointer;
 }
 
 .btn:active {
@@ -87,19 +88,19 @@ h2 {
 a {
     color: var(--link-color);
 }
-.lightGrey {
+.light-grey {
     background-color: #b9c3cf;
     color: black;
 }
-.mediumGrey {
+.medium-grey {
     background-color: #777f8c;
     color: white;
 }
-.deepGrey {
+.deep-grey {
     background-color: #424651;
     color: white;
 }
-.darkGrey {
+.dark-grey {
     background-color: #1f1e26;
     color: white;
 }
@@ -107,7 +108,7 @@ a {
     background-color: black;
     color: white;
 }
-.darkChocolate {
+.dark-chocolate {
     background-color: #382215;
     color: white;
 }
@@ -143,7 +144,7 @@ a {
     background-color: #a630d2;
     color: white;
 }
-.darkPurple {
+.dark-purple {
     background-color: #531d8c;
     color: white;
 }
@@ -163,11 +164,11 @@ a {
     background-color: #8df5ff;
     color: black;
 }
-.lightTeal {
+.light-teal {
     background-color: #01bfa5;
     color: white;
 }
-.darkTeal {
+.dark-teal {
     background-color: #16777e;
     color: white;
 }
@@ -175,7 +176,7 @@ a {
     background-color: #054523;
     color: white;
 }
-.darkGreen {
+.dark-green {
     background-color: #18862f;
     color: white;
 }
@@ -187,7 +188,7 @@ a {
     background-color: #b1ff37;
     color: black;
 }
-.pastelYellow {
+.pastel-yellow {
     background-color: #ffffa5;
     color: black;
 }
