--- a/angular/src/app/stats-2024/stats-2024.component.html
+++ b/angular/src/app/stats-2024/stats-2024.component.html
@@ -15,12 +15,12 @@
         <p>You placed {{user.pixelCount}} pixels throughout the event! Here is how many of each color you placed:</p>
         <div class="colors-wrapper">
             <span class="white count">White: {{userColors.white}}</span>
-            <span class="count lightGrey">Light Grey: {{userColors.lightGrey}}</span>
-            <span class="count mediumGrey">Medium Grey: {{userColors.mediumGrey}}</span>
-            <span class="count deepGrey">Deep Grey: {{userColors.deepGrey}}</span>
-            <span class="count darkGrey">Dark Grey: {{userColors.darkGrey}}</span>
+            <span class="count light-grey">Light Grey: {{userColors.lightGrey}}</span>
+            <span class="count medium-grey">Medium Grey: {{userColors.mediumGrey}}</span>
+            <span class="count deep-grey">Deep Grey: {{userColors.deepGrey}}</span>
+            <span class="count dark-grey">Dark Grey: {{userColors.darkGrey}}</span>
             <span class="count black">Black: {{userColors.black}}</span>
-            <span class="count darkChocolate">Dark Chocolate: {{userColors.darkChocolate}}</span>
+            <span class="count dark-chocolate">Dark Chocolate: {{userColors.darkChocolate}}</span>
             <span class="count chocolate">Chocolate: {{userColors.chocolate}}</span>
             <span class="count brown">Brown: {{userColors.brown}}</span>
             <span class="count peach">Peach: {{userColors.peach}}</span>
@@ -29,18 +29,18 @@
             <span class="count magenta">Magenta: {{userColors.magenta}}</span>
             <span class="count mauve">Mauve: {{userColors.mauve}}</span>
             <span class="count purple">Purple: {{userColors.purple}}</span>
-            <span class="count darkPurple">Dark Purple: {{userColors.darkPurple}}</span>
+            <span class="count dark-purple">Dark Purple: {{userColors.darkPurple}}</span>
             <span class="count navy">Navy: {{userColors.navy}}</span>
             <span class="count blue">Blue: {{userColors.blue}}</span>
             <span class="count azure">Azure: {{userColors.azure}}</span>
             <span class="count aqua">Aqua: {{userColors.aqua}}</span>
-            <span class="count lightTeal">Light Teal: {{userColors.lightTeal}}</span>
-            <span class="count darkTeal">Dark Teal: {{userColors.darkTeal}}</span>
+            <span class="count light-teal">Light Teal: {{userColors.lightTeal}}</span>
+            <span class="count dark-teal">Dark Teal: {{userColors.darkTeal}}</span>
             <span class="count forest">Forest: {{userColors.forest}}</span>
-            <span class="count darkGreen">Dark Green: {{userColors.darkGreen}}</span>
+            <span class="count dark-green">Dark Green: {{userColors.darkGreen}}</span>
             <span class="count green">Green: {{userColors.green}}</span>
             <span class="count lime">Lime: {{userColors.lime}}</span>
-            <span class="count pastelYellow">Pastel Yellow: {{userColors.pastelYellow}}</span>
+            <span class="count pastel-yellow">Pastel Yellow: {{userColors.pastelYellow}}</span>
             <span class="count yellow">Yellow: {{userColors.yellow}}</span>
             <span class="count orange">Orange: {{userColors.orange}}</span>
             <span class="count rust">Rust: {{userColors.rust}}</span>
