--- a/angular/src/app/stats-2023/stats-2023.component.html
+++ b/angular/src/app/stats-2023/stats-2023.component.html
@@ -17,7 +17,7 @@
                 <div class="colors-wrapper">
                     <span class="white count">White: {{userColors.white}}</span>
                     <span class="count light-grey">Light Grey: {{userColors.lightGrey}}</span>
-                    <span class="count mediumGrey">Medium Grey: {{userColors.mediumGrey}}</span>
+                    <span class="count medium-grey">Medium Grey: {{userColors.mediumGrey}}</span>
                     <span class="count deep-grey">Deep Grey: {{userColors.deepGrey}}</span>
                     <span class="count dark-grey">Dark Grey: {{userColors.darkGrey}}</span>
                     <span class="count black">Black: {{userColors.black}}</span>
