making app more dynamically generated

--- a/angular/src/app/not-found/not-found.component.html
+++ b/angular/src/app/not-found/not-found.component.html
@@ -2,6 +2,6 @@
 <main>
     <h2 class="404-error">Something went wrong</h2>
     <p>Sorry, something went wrong and the page you are looking for can not be found.</p>
-    <p>Try viewing the <a routerLink="/users/2023" class="link">2023 user list</a> or the <a routerLink="/users/2024" class="link">2024 user list</a></p>
+    <p>Try viewing the <a routerLink="/2023/users" class="link">2023 user list</a> or the <a routerLink="/2024/users" class="link">2024 user list</a></p>
 </main>
 <app-footer />
