--- a/angular/src/app/user-stats/user-stats.component.html
+++ b/angular/src/app/user-stats/user-stats.component.html
@@ -1,16 +1,16 @@
-<app-navbar [year]="2024" [username]="username"  />
+<app-navbar [year]="year" [username]="username"  />
 @if (loading) {
     <app-loading />
 }
 @if (wasUserFound === false) {
     <main>
-        <p>Sorry, it looks like you didn't place any pixels during the 2024 event. <a (click)="sendToUsersList(2024)" class="link">Click here</a> to view the list of users for 2024 and see if you can find your username. If you still can't find your username and you truely believe you did participate in 2024, send me a DM <a href="https://sh.itjust.works/u/the_real_monte">&#64;the_real_monte</a> and I can check the database.</p>
+        <p>Sorry, it looks like you didn't place any pixels during the {{year}} event. <a (click)="sendToUsersList()" class="link">Click here</a> to view the list of users for {{year}} and see if you can find your username. If you still can't find your username and you truely believe you did participate in 2024, send me a DM <a href="https://sh.itjust.works/u/the_real_monte">&#64;the_real_monte</a> and I can check the database.</p>
     </main>
 }
 @if (showResults) {
     <main>
-        <h2>Hello, {{user.username}}! Here is how you did in 2024</h2>
-        <p>Your ranking: {{user.userRank}} out of 1914 users.</p>
+        <h2>Hello, {{user.username}}! Here is how you did in {{year}}</h2>
+        <p>Your ranking: {{user.userRank}} out of {{yearStat.numberOfusers}} users.</p>
         <p>The coordinate you placed the most pixels on was ({{user.xCord}}, {{user.yCord}}) - {{user.cordCount}} times (including the pixels you deleted).</p>
         <p>You placed {{user.pixelCount}} pixels throughout the event! Here is how many of each color you placed:</p>
         <div class="colors-wrapper">
@@ -20,7 +20,9 @@
             <span class="count deep-grey">Deep Grey: {{userColors.deepGrey}}</span>
             <span class="count dark-grey">Dark Grey: {{userColors.darkGrey}}</span>
             <span class="count black">Black: {{userColors.black}}</span>
-            <span class="count dark-chocolate">Dark Chocolate: {{userColors.darkChocolate}}</span>
+            @if (year !== 2023) {
+                <span class="count dark-chocolate">Dark Chocolate: {{userColors.darkChocolate}}</span>
+            }
             <span class="count chocolate">Chocolate: {{userColors.chocolate}}</span>
             <span class="count brown">Brown: {{userColors.brown}}</span>
             <span class="count peach">Peach: {{userColors.peach}}</span>
@@ -29,7 +31,9 @@
             <span class="count magenta">Magenta: {{userColors.magenta}}</span>
             <span class="count mauve">Mauve: {{userColors.mauve}}</span>
             <span class="count purple">Purple: {{userColors.purple}}</span>
-            <span class="count dark-purple">Dark Purple: {{userColors.darkPurple}}</span>
+            @if (year !== 2023) {
+                <span class="count dark-purple">Dark Purple: {{userColors.darkPurple}}</span>
+            }
             <span class="count navy">Navy: {{userColors.navy}}</span>
             <span class="count blue">Blue: {{userColors.blue}}</span>
             <span class="count azure">Azure: {{userColors.azure}}</span>
@@ -50,8 +54,15 @@
             <span class="count watermelon">Watermelon: {{userColors.watermelon}}</span>
         </div>
         <section class="btn-wrapper">
-            <button (click)="sendUserToDraw()" class="btn dark-green">Click here to see the pixels you placed</button>
-            <button (click)="sendUserTo2023Stats()" class="btn magenta">See your 2023 Stats</button>
+            @if (year === 2024) {
+                <button (click)="sendUserToDraw()" class="btn dark-green">Your pixels placed in 2024</button>
+            }
+            @if (year !== 2023) {
+                <button (click)="sendUserToAnotherStatsYear(2023)" class="btn magenta">Your 2023 Stats</button>
+            }
+            @if (year !== 2024) {
+                <button (click)="sendUserToAnotherStatsYear(2024)" class="btn magenta">Your 2024 Stats</button>
+            }
         </section>
     </main>
     }
