--- a/angular/src/app/navbar/navbar.component.html
+++ b/angular/src/app/navbar/navbar.component.html
@@ -1,11 +1,9 @@
-<header>
-    <a href="/">
-        <div id="logo">
-            <div class="logo-square back"></div>
-            <div class="logo-square front"></div>
-        </div>
-    </a>
-    <a href="/2024" class="logo-link"><h1>Canvas Stats</h1></a>
+<header (click)="goToYearHomepage()">
+    <div id="logo">
+        <div class="logo-square back"></div>
+        <div class="logo-square front"></div>
+    </div>
+    <h1>Canvas Stats</h1>
     <img [src]="getLogoYear()" [alt]="year" class="logo-year" />
     
 </header>
